# mc_sim

./: .gitignore  CMakeLists.txt  README.md  fighter.cpp  fighter.h  main.cpp  mc_sim  simple_gbm  simple_gbm.cpp  ufc_sim
data/: clean_fighters.csv
include/: fighter.h  fightnight.h  simulator.h  team.h
scripts/: clean_data.py
simple_gbm.dSYM/Contents/: Info.plist
simple_gbm.dSYM/Contents/Resources/DWARF/: simple_gbm
simple_gbm.dSYM/Contents/Resources/Relocations/aarch64/: simple_gbm.yml
src/: fighter.cpp  fightnight.cpp  main.cpp  simple_gbm.cpp  simulator.cpp
tests/: test_fight_v1.cpp
